--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
     <link rel="stylesheet" href="dist/css/app.css">
 </head>
 <body>
-    <h1>Hola mundo con sass</h1>
+    <header class="header">
+        <div class="contenedor contenido-header">
+            <h1>Techno & EDM Festival</h1>
+            <nav class="navegacion-principal">
+                <a href="#">LineUp</a>
+                <a href="#">Galeria</a>
+                <a href="#">Boletos</a>
+            </nav>
+        </div>
+    </header>
+    <div class="video">
+        <div class="overlay">
+            <div class="contenedor contenedor-video">
+                <h2>Techno & EDM Festival</h2>
+                <p>Julio 2026, CDMX, Mexico</p>
+            </div>
+        </div>
+        <video autoplay muted loop>
+            <source src="video/dj.mp4" type="video/mp4"/>
+            <source src="video/dj.ogv" type="video/ogv"/>
+            <source src="video/dj.webm" type="video/webm"/>
+        </video>
+    </div>
 </body>
 </html>
